Changed auto/light/dark mode icons

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,21 +36,24 @@ theme:
   palette:
     - media: "(prefers-color-scheme)"
       toggle:
-        icon: material/link
+        icon: material/brightness-auto
+        # icon: material/link
         name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: indigo
       accent: indigo
       toggle:
-        icon: material/toggle-switch
+        icon: material/brightness-7
+        # icon: material/toggle-switch
         name: Switch to dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: black
       accent: indigo
       toggle:
-        icon: material/toggle-switch-off
+        icon: material/brightness-4
+        # icon: material/toggle-switch-off
         name: Switch to system preference
   # favicon: null
   icon: { logo: material/shield }
