Improved install cmds

--- a/examples/docker-compose/prometheus/docker-compose.yml
+++ b/examples/docker-compose/prometheus/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - /bin/sh
       - -ec
       - |
-        install -Dm644 /dev/stdin \
+        install -DTm644 /dev/stdin \
           /etc/grafana/provisioning/datasources/prometheus.yml << 'EOF'
         ---
         apiVersion: 1
