--- a/examples/docker-compose/loki/docker-compose.yml
+++ b/examples/docker-compose/loki/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - /bin/sh
       - -ec
       - |
-        install -Dm644 /dev/stdin \
+        install -DTm644 /dev/stdin \
           /etc/grafana/provisioning/datasources/loki.yml << 'EOF'
         ---
         apiVersion: 1
