Not using install's -T flag in Alpine

--- a/examples/docker-compose/loki/docker-compose.yml
+++ b/examples/docker-compose/loki/docker-compose.yml
@@ -23,8 +23,9 @@ services:
     entrypoint:
       - /bin/sh
       - -ec
+      # Note: not using install's "-T" flag as it's not supported in Alpine
       - |
-        install -DTm644 /dev/stdin \
+        install -Dm644 /dev/stdin \
           /etc/grafana/provisioning/datasources/loki.yml << 'EOF'
         ---
         apiVersion: 1
