--- a/examples/docker-compose/prometheus/docker-compose.yml
+++ b/examples/docker-compose/prometheus/docker-compose.yml
@@ -19,8 +19,9 @@ services:
     entrypoint:
       - /bin/sh
       - -ec
+      # Note: not using install's "-T" flag as it's not supported in Alpine
       - |
-        install -DTm644 /dev/stdin \
+        install -Dm644 /dev/stdin \
           /etc/grafana/provisioning/datasources/prometheus.yml << 'EOF'
         ---
         apiVersion: 1
