Preseed verbose install cmds

--- a/examples/debian-preseed/preseed.cfg
+++ b/examples/debian-preseed/preseed.cfg
@@ -42,9 +42,9 @@ d-i debian-installer/exit/poweroff boolean true
 
 d-i preseed/late_command string in-target bash -ec '\
     sed -Ei "s/^#?Port[ \t].*$/Port 2222/" /etc/ssh/sshd_config; \
-    install -Tm440 <(echo "mainuser ALL=(ALL) NOPASSWD: ALL") \
+    install -Tvm440 <(echo "mainuser ALL=(ALL) NOPASSWD: ALL") \
         /etc/sudoers.d/mainuser-nopassword; \
-    install -omainuser -gmainuser -dm700 ~mainuser/.ssh; \
-    install -omainuser -gmainuser -Tm600 /dev/null \
+    install -omainuser -gmainuser -dvm700 ~mainuser/.ssh; \
+    install -omainuser -gmainuser -Tvm600 /dev/null \
         ~mainuser/.ssh/authorized_keys; \
     echo "ssh-ed25519 AAAAC3Nza..." >> ~mainuser/.ssh/authorized_keys'
